# socket-chatroom

./: CMakeLists.txt  client.cpp  main.cpp  server.cpp
json-lib/: CMakeLists.txt  json.cpp  json.hpp
sockets-lib/: CMakeLists.txt  sockets-address.cpp  sockets-exceptions.cpp  sockets-master.cpp  sockets-receive.cpp  sockets-send.cpp  sockets.cpp  sockets.hpp
